# usaco_training

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  clocks.in  milk.in  numtri.in
docs/: friday_prob.txt
src/: CMakeLists.txt  ariprog.cpp  barn1.cpp  beads.cpp  calfflac.cpp  clocks.cpp  crypt1.cpp  dualpal.cpp  friday.cpp  gift1.cpp  milk.cpp  milk2.cpp  milk3.cpp  namenum.cpp  numtri.cpp  packrec.cpp  palsquare.cpp  pprime.cpp  ride.cpp  transform.cpp
